--- a/assets/langs/bn-BD.json
+++ b/assets/langs/bn-BD.json
@@ -234,7 +234,11 @@
     "TAP_TO_UPLOAD_EXTRA_PROOF": "অতিরিক্ত প্রমাণ আপলোড করতে ট্যাপ করুন",
     "FROM": "থেকে",
 "TO": "প্রতি",
-"UPDATE_NOW": "এখন আপডেট করুন"
+"UPDATE_NOW": "এখন আপডেট করুন",
+"ENTER_ID": "আইডি লিখুন",
+"ENTER_YOUR_PIN": "আপনার পিন লিখুন"
+
+
 
 
 
