--- a/assets/langs/en-US.json
+++ b/assets/langs/en-US.json
@@ -234,7 +234,11 @@
     "TAP_TO_UPLOAD_EXTRA_PROOF": "Tap to Upload Extra Proof",
     "FROM": "From",
 "TO": "To",
-"UPDATE_NOW": "Update Now"
+"UPDATE_NOW": "Update Now",
+"ENTER_ID": "Enter ID",
+"ENTER_YOUR_PIN": "Enter your PIN"
+
+
 
 
 
