--- a/assets/langs/fa-IR.json
+++ b/assets/langs/fa-IR.json
@@ -234,7 +234,11 @@
     "TAP_TO_UPLOAD_EXTRA_PROOF": "برای بارگذاری مدرک اضافی ضربه بزنید",
     "FROM": "از",
 "TO": "به",
-"UPDATE_NOW": "اکنون به‌روزرسانی کنید"
+"UPDATE_NOW": "اکنون به‌روزرسانی کنید",
+"ENTER_ID": "شناسه را وارد کنید",
+"ENTER_YOUR_PIN": "پین خود را وارد کنید"
+
+
 
 
 
