--- a/assets/langs/ps-AF.json
+++ b/assets/langs/ps-AF.json
@@ -234,7 +234,11 @@
     "TAP_TO_UPLOAD_EXTRA_PROOF": "د اضافي ثبوت پورته کولو لپاره ټېپ وکړئ",
     "FROM": "له",
 "TO": "ته",
-"UPDATE_NOW": "اوس تازه کړئ"
+"UPDATE_NOW": "اوس تازه کړئ",
+"ENTER_ID": "شناسه دننه کړئ",
+"ENTER_YOUR_PIN": "خپل پین دننه کړئ"
+
+
 
 
 
